src/app/pages/ecg-cases/ecg-cases.page.scss
/* ... */
body {font-family: Arial, Helvetica, sans-serif;}
* {box-sizing: border-box;}
.open-button {
  background-color: #555;
  color: white;
  padding: 16px 20px;
  border: none;
  cursor: pointer;
  opacity: 0.8;
  position: fixed;
  bottom: 23px;
  right: 28px;
  width: 280px;
}

/* The popup form - hidden by default */
.form-popup {
  display: none;
  position: fixed;
  border: 3px solid #f1f1f1;
  z-index: 9;
  // left: 32%;
  // top: 19%;
  left: 33%;
  top: 131px;
  border-radius: 10px;
}

/* Add styles to the form container */
.form-container {
  max-width: 200px;
  padding: 5px;
  background-color: white;
}

.filter-block {
  display: grid;
}

.arrow-cls {
  background-color: #f7f2f2 !important;
  transform: rotate(90deg);
  height: 10px;
  width: 10px;
}

.filter-label-cls {
  font-size: 17px;
  color: #000 !important;
  background-color: #f7f2f2 !important;
  font-family: "Open Sans";
  margin: 0px;
  text-align: center;
  padding: 6px;
  border-radius: 0px !important;
  margin-bottom: 1px;
  cursor: pointer;
}

.filter-label-cls:hover {
  color: #f7f2f2 !important;
  background-color: #74b7b4 !important;
  border-radius: 5px !important;
  // text-align: center;
  font-size: 17px;
  font-family: "Open Sans";
  margin: 0px;
  padding: 6px;
  margin-bottom: 1px;
  cursor: pointer;
}

.filter-label-cls-active {
  color: #f7f2f2 !important;
  background-color: #3ec5be !important;
  border-radius: 5px !important;
  text-align: center;
  font-size: 17px;
  font-family: "Open Sans";
  margin: 0px;
  padding: 6px;
  margin-bottom: 1px;
  cursor: pointer;
}


/* Set a style for the submit/login button */
.form-container .btn {
  background-color: #04AA6D;
  color: white;
  padding: 16px 20px;
  border: none;
  cursor: pointer;
  width: 100%;
  margin-bottom:10px;
  opacity: 0.8;
}

/* Add a red background color to the cancel button */
.form-container .cancel {
  background-color: red;
}

/* Add some hover effects to buttons */
.form-container .btn:hover, .open-button:hover {
  opacity: 1;
}

.link-cls {
  color: #210de4 !important;
  cursor: pointer;
  // text-decoration: underline;
}


.one-line-cls {
  display: flex;
}

.one-line-label-cls {
  width: 20% !important;;
  margin-bottom: 0px;
  margin-top: 8px;
}

.one-line-input-cls {
  margin-right: 18px;
}

.select-item-cls {
  height: 30px;
    width: 98%;
    margin-right: 18px;
    border: 1px solid #dad2d2;
}
// .single-select-cls {
//   width: 100%;
//   height: 30px;
//   border-color: #e1e1e1;
//   font-size: 12px;
// }
.single-select-cls {
  margin: 0px;
  padding: 0px;
  margin-bottom: 18px;
  width: 100%;
  height: 30px;
  border-color: #e1e1e1;
  font-size: 12px;
}

ion-item::part(native){
  padding-inline-start: 11px !important;
  padding-left: 11px !important;
}

ion-item.item-interactive.ion-invalid {
  --highlight-background: transparent !important;
}

